--- a/web/templates/file.html
+++ b/web/templates/file.html
@@ -61,13 +61,22 @@
                         <td>{{ item.update_datetime }}</td>
                         <td>
                             {% if item.file_type == 2 %}
-                                <a href="#" data-toggle="modal" data-target="#myModal"
+                                <a href="#"
+                                   data-toggle="modal"
+                                   data-target="#myModal"
+                                   data-name="{{ item.name }}"
+                                   data-fid="{{ item.id }}"
                                    data-whatever="编辑文件夹">
                                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                 </a>
                             {% endif %}|
                             <a href="#">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-trash "
+                                      style="color: red"
+                                      aria-hidden="true"
+                                      data-toggle="modal"
+                                      data-fid="{{ item.id }}"
+                                      data-target="#alertModal"></span>
                             </a>
                         </td>
                     </tr>
@@ -91,6 +100,7 @@
                 <div class="modal-body">
                     <form id="form">
                         {% csrf_token %}
+                        <input type="text" class="hide" name="fid" id="fid">
                         {% for field in form %}
                             <div class="form-group">
                                 <label for="{{ field.id_for_label }}">{{ field.label }}</label>
@@ -107,6 +117,24 @@
             </div>
         </div>
     </div>
+
+    <!--删除警告对话框-->
+    <div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="alert alert-danger alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">×</span></button>
+                <h4>是否确定删除</h4>
+                <p>
+                    您正进行一项非常危险的操作，这将会导致整个文件夹下面的所有文件都会被一并删除，且无法恢复。
+                </p>
+                <p>
+                    <a href="#" class="btn btn-success btn-sm" data-dismiss="modal" aria-label="Close">取 消</a>
+                    <button type="button" class="btn btn-danger btn-sm" id="btnDelete">删 除</button>
+                </p>
+            </div>
+        </div>
+    </div>
 {% endblock %}]
 
 {% block JS %}
@@ -115,15 +143,35 @@
         $(function () {
             initModal()
             bindModelSubmit()
+            bindDeleteSubmit()
         })
 
         function initModal() {
             $('#myModal').on('show.bs.modal', function (event) {
                 var button = $(event.relatedTarget); // Button that triggered the modal
                 var recipient = button.data('whatever') // Extract info from data-* attributes
+                var name = button.data('name') //获取自己绑定的name
+                var fid = button.data('fid') //获取自己绑定的fid
                 var modal = $(this);
-                modal.find('.modal-title').text(recipient)
-                $("#form")[0].reset()
+                modal.find('.modal-title').text(recipient);
+
+                if (fid) {
+                    //fid有值就是编辑否则就是新建
+                    modal.find("#id_name").val(name)
+                    modal.find("#fid").val(fid)
+                } else {
+                    //新建
+                    modal.find(".error-msg").empty();
+                    $("#form")[0].reset()
+                }
+
+            })
+
+            $('#alertModal').on('show.bs.modal', function (event) {
+                var button = $(event.relatedTarget); // Button that triggered the modal
+                var fid = button.data('fid') //获取自己绑定的fid
+                $("#btnDelete").attr('fid',fid)
+
             })
         }
 
@@ -144,6 +192,23 @@
                             })
                         }
                     }
+                })
+            })
+        }
+        function bindDeleteSubmit() {
+            $("#btnDelete").click(function (){
+                //必须首先要获取需要删除的对象的ID
+
+                $.ajax({
+                    url:"{% url 'file_delete' project_id=request.tracer.project.id %}",
+                    type:"GET",
+                    data:{fid:$(this).attr('fid')},
+                    success:function (res) {
+                        if(res.status){
+                            location.reload()
+                        }
+                    }
+
                 })
             })
         }
