--- a/web/templates/file.html
+++ b/web/templates/file.html
@@ -1,6 +1,20 @@
 {% extends 'layout/manage.html' %}
 {% load static %}
 
+{% block CSS %}
+    <style>
+        .upload-Progress {
+            position: fixed;
+            right: 2px;
+            bottom: 2px;
+            width: 400px;
+        }
+
+        .upload-Progress .progress-error{
+
+        }
+    </style>
+{% endblock %}
 {% block content %}
     <div class="container-fluid">
 
@@ -137,6 +151,41 @@
             </div>
         </div>
     </div>
+
+    <!--进度条-->
+    <div id="uploadProgress" class="upload-Progress hide">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+                上传进度
+            </div>
+            <table class="table">
+                <tbody id="progressList">
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="hide">
+        <table id="progressTemplate">
+            <tr>
+                <td>
+                    <div class="name"></div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                             aria-valuenow="0"
+                             aria-valuemin="0"
+                             aria-valuemax="100" style="width: 0;">
+                            0%
+                        </div>
+                    </div>
+                    <div class="progress-error"></div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 {% endblock %}]
 
 {% block JS %}
@@ -145,6 +194,8 @@
     <script>
         // 临时凭证
         var COS_CREDENTIAL = "{% url 'cos_credentials' project_id=request.tracer.project.id %}"
+        // 上传至腾讯cos的文件保存到本地
+        var FILE_POST = "{% url 'file_post' project_id=request.tracer.project.id %}"
 
 
         $(function () {
@@ -225,6 +276,7 @@
         function bindUploadFile() {
             // 临时凭证获取
             $("#uploadFile").change(function () {
+                $("#progressList").empty()
                 var filelist = $(this)[0].files;
 
                 // 获取每次上传的每个文件的大小和名称
@@ -235,16 +287,23 @@
                 // 将数据发送到后台再由后台校验，没问题才返回临时凭证，否则返回错误信息
                 var cos_credentials = new COS({
                     getAuthorization: function (options, callback) {
-                        $.post(COS_CREDENTIAL,JSON.stringify(checkFilelist), function (data) {
-                            var credentials = data && data.credentials;
-                            if (!data || !credentials) return console.log('credentials invalid');
-                            callback({
-                                TmpSecretId: credentials.tmpSecretId,
-                                TmpSecretKey: credentials.tmpSecretKey,
-                                XCosSecurityToken: credentials.sessionToken,
-                                StartTime: data.startTime,
-                                ExpiredTime: data.expiredTime
-                            });
+                        $.post(COS_CREDENTIAL, JSON.stringify(checkFilelist), function (res) {
+
+                            if (res.status) {
+                                var credentials = res.data && res.data.credentials;
+                                callback({
+                                    TmpSecretId: credentials.tmpSecretId,
+                                    TmpSecretKey: credentials.tmpSecretKey,
+                                    XCosSecurityToken: credentials.sessionToken,
+                                    StartTime: res.data.startTime,
+                                    ExpiredTime: res.data.expiredTime
+                                });
+
+                                $("#uploadProgress").removeClass('hide')
+                            } else {
+                                alert(res.error);
+                            }
+
                         });
                     }
                 });
@@ -252,19 +311,38 @@
                 // 上传文件
                 $.each(filelist, function (index, fileObject) {
                     var fileName = fileObject.name;
+                    var fileSize = fileObject.size;
+                    var key = (new  Date()).getTime() + '_' + fileName;
                     // 上传文件（异步）
+
+                    //以下代码处理上传进度条哦
+                    var tr =  $('#progressTemplate').find('tr').clone();
+                    tr.find('.name').text(fileName);
+                    $("#progressList").append(tr);
+
                     cos_credentials.putObject({
                         Bucket: '{{ request.tracer.project.bucket }}', /* 必须 */
                         Region: '{{ request.tracer.project.region }}',     /* 存储桶所在地域，必须字段 */
                         Key: fileName,              /* 必须 */
-                        Body: fileObject, // 上传文件对象
+                        Body: key, // 上传文件对象
                         onProgress: function (progressData) {
-                            console.log({{ request.tracer.project.bucket }})
-                            console.log("文件上传进度--->", fileName, JSON.stringify(progressData));
+                            var percent = progressData.percent * 100 + "%" ;
+                            tr.find('.progress-bar').text(percent);
+                            tr.find('.progress-bar').css('width',percent);
                         }
                     }, function (err, data) {
-                        console.log()
                         console.log(err || data);
+                        if(data && data.statusCode ===200){
+                            //上传成功之后，将上传的文件提交至后台，写入数据库
+                            $.post(FILE_POST,{
+                                name:fileName,
+                                key:key,
+                                size:fileSize},function (res){
+                                console.log()
+                            })
+                        }else {
+                            tr.find("#progress-error").text('上传失败');
+                        }
                     });
 
                 })
